--- a/water-plants/src/index.css
+++ b/water-plants/src/index.css
@@ -1,13 +1,28 @@
+html,
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+	margin: 0;
+	padding: 0;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.App {
+	font-family: 'Roboto', sans-serif;
+	text-align: center;
+	padding-bottom: 36px;
+}
+
+ul {
+	display: flex;
+	justify-content: flex-end;
+	margin: 0 0 36px;
+	padding: 12px;
+}
+
+li {
+	list-style: none;
+	margin-right: 6px;
+	color: #204963;
+}
+
+a {
+	text-decoration: none;
 }
